# EditorMusic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  about.md  changelog.md  logo.psd  mod.json
.github/workflows/: multi-platform.yml
old/: AudioInfoPopup.cpp  AudioInfoPopup.hpp  AudioManager.cpp  AudioManager.hpp  Ease.cpp  Ease.hpp  Utils.hpp
resources/: album-placeholder.psd  album-round-overlay.psd  album-round.psd  click-for-song-info.psd  geode-folder.psd
src/: AudioInfoPopup.cpp  AudioInfoPopup.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  Ease.cpp  Ease.hpp  Easer.cpp  Easer.hpp  Keybinds.cpp  Keybinds.hpp  Utils.hpp  eclipse.hpp  keybinds.cpp  log.hpp  main.cpp  utils.cpp  utils.hpp
src/hooks/: CCScheduler.cpp  CCScheduler.hpp  EditorPauseLayer.cpp  EditorPauseLayer.hpp  LevelEditorLayer.cpp  LevelEditorLayer.hpp  LoadingLayer.cpp  LoadingLayer.hpp  MenuLayer.cpp  MenuLayer.hpp  window.cpp  window.hpp
src/settings/: ReloadSongNode.cpp  ReloadSongNode.hpp  ReloadSongSetting.cpp  ReloadSongSetting.hpp
src/ui/: CurrentSongNode.cpp  CurrentSongNode.hpp  PreloadUI.cpp  PreloadUI.hpp  ProgressBar.cpp  ProgressBar.hpp  SongInfoPopup.cpp  SongInfoPopup.hpp  SongViewPopup.cpp  SongViewPopup.hpp
